--- a/style.css
+++ b/style.css
@@ -91,8 +91,53 @@ h1 {
 
 .dois {
     background-color: lightgreen;
-    grid-column: 1/4;
-    height: 1600px;
+    height: 700px;
+    width: 1000px;
+    margin: auto;
+}
+.empre-principal-titulo {
+    text-align: center;
+    padding-top: 45px;
+}
+
+.empre-principal {
+    display: flex;
+    padding: 24px 0px;
+    width: 760px;
+    margin: auto;
+    margin-bottom: 45px;
+    column-gap: 20px;
+    gap: 20px;
+}
+
+.empre-para {
+    text-align: center;
+}
+
+.empre-principal-i1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33.33%;
+}
+
+.empre-principal-i2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33.33%;
+}
+
+.empre-principal-i3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33.33%;
+}
+
+.empre-imagens {
+    width: 250px;
+    padding: 15px;
 }
 
 .prod {
