--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    background-color: lightcyan;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -65,6 +64,7 @@ li {
 
 .item {
     border: 1px solid black;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.);
     /*width: 150px;
     height: 150px;*/
 }
@@ -90,10 +90,13 @@ h1 {
 }
 
 .dois {
-    background-color: lightgreen;
     height: 700px;
-    width: 1000px;
+    width: 90vw;
     margin: auto;
+}
+
+.empre {
+    justify-content: center;
 }
 .empre-principal-titulo {
     text-align: center;
@@ -102,9 +105,8 @@ h1 {
 
 .empre-principal {
     display: flex;
+    justify-content: space-evenly;
     padding: 24px 0px;
-    width: 760px;
-    margin: auto;
     margin-bottom: 45px;
     column-gap: 20px;
     gap: 20px;
@@ -136,7 +138,7 @@ h1 {
 }
 
 .empre-imagens {
-    width: 250px;
+    width: 400px;
     padding: 15px;
 }
 
